Made more reusable

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
   </style>
 </head>
 <body>
+
+  <main>
   <section class="testimonials">
 
     <div class="container">
 
-      <div class="item-one item">
+      <div class="item quote">
         <div class="header">
-          <div class="img-one img"></div>
-          <div class="description">
-            <div class="name">Daniel Clifford</div>
-            <div class="title">Verified Graduate</div>
+          <img src="images/image-daniel.jpg" alt="Daniel" class="author_image border">
+          <div class="author_description">
+            <p class="author__name">Daniel Clifford</p>
+            <p class="author__title">Verified Graduate</p>
           </div>
         </div>
 
-        <h1>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-          in the company I joined. I honestly feel I got every penny’s worth.</h1>
+        <h2>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+          in the company I joined. I honestly feel I got every penny’s worth.</h2>
         <p class="text">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
           transition and have heard some people who had an amazing experience here. I signed up 
           for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
@@ -38,61 +40,61 @@
           the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
       </div>
 
-      <div class="item-two item">
+      <div class="item">
         <div class="header">
-          <div class="img-two img"></div>
-          <div class="description">
-            <div class="name">Jonathan Walters</div>
-            <div class="title">Verified Graduate</div>
+          <img src="images/image-jonathan.jpg" alt="Jonathan" class="author_image">
+          <div class="author_description">
+            <p class="author__name">Jonathan Walters</p>
+            <p class="author__title">Verified Graduate</p>
           </div>
         </div>
 
-        <h1>The team was very supportive and kept me motivated</h1>
+        <h2>The team was very supportive and kept me motivated</h2>
         <p class="text">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for
           a big company. This was one of the best investments I’ve made in myself. ”</p>
       </div>
 
-      <div class="item-three item">
+      <div class="item">
         <div class="header">
-          <div class="img-three img"></div>
-          <div class="description">
-            <div class="name">Jeanette Harmon</div>
-            <div class="title">Verified Graduate</div>
+          <img src="images/image-jeanette.jpg" alt="Jeanette" class="author_image">
+          <div class="author_description">
+            <p class="author__name">Jeanette Harmon</p>
+            <p class="author__title">Verified Graduate</p>
           </div>
         </div>
         
-        <h1>An overall wonderful and rewarding experience</h1>
+        <h2>An overall wonderful and rewarding experience</h2>
         <p class="text">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
           while doing something I love. ”</p>
       </div>
 
-      <div class="item-four item">
+      <div class="item">
         <div class="header">
-          <div class="img-four img"></div>
-          <div class="description">
-            <div class="name">Patrick Abrams</div>
-            <div class="title">Verified Graduate</div>
+          <img src="images/image-patrick.jpg" alt="Patrick" class="author_image border">
+          <div class="author_description">
+            <div class="author__name">Patrick Abrams</div>
+            <div class="author__title">Verified Graduate</div>
           </div>
         </div>
 
-        <h1>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-          learning from their experiences was easy.</h1>
+        <h2>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+          learning from their experiences was easy.</h2>
         <p class="text">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
           gave me the confidence necessary to be able to go out in the world and present myself as a capable 
           junior developer. The standard is above the rest. You will get the personal attention you need from 
           an incredible community of smart and amazing people. ”</p>
       </div>
 
-      <div class="item-five item">
+      <div class="item">
         <div class="header">
-          <div class="img-five img"></div>
-          <div class="description">
-            <div class="name">Kira Whittle</div>
-            <div class="title">Verified Graduate</div>
+          <img src="images/image-kira.jpg" alt="Kira" class="author_image">
+          <div class="author_description">
+            <p class="author__name">Kira Whittle</p>
+            <p class="author__title">Verified Graduate</p>
           </div>
         </div>
 
-        <h1>Such a life-changing experience. Highly recommended!</h1>
+        <h2>Such a life-changing experience. Highly recommended!</h2>
         <p class="text">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
           professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
           student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
@@ -104,13 +106,15 @@
       </div>
 
     </div>
-
   </section>
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Vikash Yadav</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Vikash Yadav</a>.
+    </div>
+  </footer>
+</main>
+
 </body>
 </html>
